python_library/collect_and_eval/jitfailure-dolfin_expression_b0ab478d9183426331b41827af4bfea0/error.log
/tmp/tmp45gexuhs/dolfin_expression_b0ab478d9183426331b41827af4bfea0.cpp: In member function ‘virtual void dolfin::dolfin_expression_b0ab478d9183426331b41827af4bfea0::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp45gexuhs/dolfin_expression_b0ab478d9183426331b41827af4bfea0.cpp:63:58: error: ‘laser_spot_location’ was not declared in this scope
           values[0] = max_laser_intensity*exp(-(pow(x[0]-laser_spot_location[0],2)/(2*pow(laser_spot_sigma,2))+pow(x[1]-laser_spot_location[1],2)/(2*pow(laser_spot_sigma,2))));
                                                          ^
